style.css
:root {
    --color-primary: #193f6f;
    /* --color-secondary: #51a749; */
    --color-secondary: #3e8637;
    --color-light: #fafafa;
    --color-dark: #282828;

    --color-text-secondary: #777;
    --color-text-footer: #aaa;
    --color-text-secondary-on-color: #ddd;
}

html, body {
    margin:0;
    padding:0;
    font-size: 0.95em;   
}

body {
    background-color: var(--color-light);
    font-family: 'Roboto', sans-serif;
    display:grid;
    height:100%;
    min-height: 100vh;
    grid-template-rows:1fr 4em;
    color: var(--color-dark);
}

/* Title Font */
h1,h2,h3,h4,h5,h6 {
    font-family: 'Montserrat', sans-serif;
}

/* Header */
header {
    position:fixed;
    width:100%;
    top:0;
}
/*======================
        Nav Bar
========================*/
nav {
    background-color: var(--color-light);
    display:flex;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0 0 5px 2px #9995;
}
nav > .logo {
    height:3.5em;
    margin:0.25em 0.5em;
}
nav > .logo > a > img {
    height:100%;
}

nav > .nav-list {
    display:flex;
    flex-direction: row;
    box-sizing: border-box;
    height:100%;
}
nav > .nav-list > li {
    list-style: none;
}
.nav-link {
    box-sizing: border-box;
    cursor: pointer;
    padding: 1em 1.1em;
    margin: 0 0.2em;
    color: var(--color-dark);
    text-decoration: none;
    border-bottom: 3.5px solid var(--color-light); 
    transition: border-color 0.1s ease;
}
.nav-link:hover {
   border-color:var(--color-secondary);
}

.nav-link.btn-secondary {
    border:0;
    margin:0 0.5em;
}

/*======================
        Footer
========================*/
footer {
    background-color: var(--color-dark);
    color:var(--color-text-footer);
    text-align: center;
    display:flex;
    flex-direction: column;
    justify-content: center;
    height:100%;
}
footer > p {
    margin: 0;
}
footer a { 
    color:var(--color-text-footer);
    text-decoration: none;
}

footer a:hover {
    text-decoration: underline;
}

/*======================
        Buttons
========================*/

.btn {
    padding:0.75em 1.2em;
    border-radius: 5px;
    cursor:pointer;
    text-decoration: none;
}

.btn-secondary {
    background-color:var(--color-secondary);
    color:var(--color-light) !important;
    transition:background-color 0.2s ease;
}

.btn-secondary:hover {
    background-color:#51a749;
}


/*======================
      Main Section
========================*/
.main {
    margin-top:4em;
}


.content, .booth-package-container, .sponsorship-container {
    max-width: 1100px;
    margin: 0 auto;
    padding:1em 1.75em;
}




.main h1 {
    font-size: 2em;
}

/*======================
        Title
========================*/
.title {
    background: linear-gradient(#193f6faa, #193f6fee),  url("images/reception.jpg");
    background-size: cover;
    background-position: center;
    height:20em;

    display:flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    color: var(--color-light);
}
.title h1 {
    margin:0.25em 0;
    font-size: 2em;
}


/*======================
        Pricing
========================*/

.price-table {
    margin:0 auto;
    border-spacing: 0.75em;
}
.price-table tr td:first-child {
    text-align: right;
}
.pricing p {
    margin:0;
    
}
.pricing .future, .pricing .past {
    color:var(--color-text-secondary);
}

.pricing .past {
    text-decoration: line-through;
    
}
.pricing .current {
    font-weight: 700;
    color: var(--color-secondary);
}

/*======================
     Booth Packages
========================*/

.packages-list {
    display:flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.package {
    min-width: 275px;
    max-width: 275px;
    border-radius: 10px;
    box-shadow: 1px 1px 5px 2px #9995;
    padding:1em 1.3em;
    margin:1em;

    display:flex;
    flex-direction: column;
    justify-content: space-between;
}

.package h2 {
    margin-top:0.5em;
    text-align: center;
}
.package h3 {
    margin:0.5em 0;
}


/*======================
      Sponsorships
========================*/
.sponsorships-list {
    box-sizing: border-box;
    margin: 1em 0;
}


.sponsorship {
    border-radius: 10px;
    box-shadow: 1px 1px 5px 2px #9995;
    margin:1.5em;
    padding:1em;
}
.sponsorship > .information {
    display:flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.sponsorship h2 {
    margin-top:0.5em;
}
.sponsorship h3 {
    margin:0.5em 0;
}

.sponsorship .pricing-title {
    text-align: center;
}

.sponsorship .price-container {
    min-width: 200px;
}

/* Colored sponsorship displays */

.sponsorship.blue {
    background-color: var(--color-primary);
    color: var(--color-text-secondary-on-color);
}

.sponsorship.green {
    background-color: var(--color-secondary);
    color: var(--color-text-secondary-on-color);
}

.blue h3, .blue h2, .green h3, .green h2 {
    color: var(--color-light);
}


.blue .pricing .future, .blue .pricing .past{
    color: var(--color-text-secondary-on-color);
}

.green .pricing .future, .green .pricing .past {
    color: var(--color-text-secondary-on-color);
}

.green .pricing .current, .blue .pricing .current {
    color: var(--color-light);
}



/*======================
    Question Section
========================*/
.question-section {
    padding:1em 0;
    display:flex;
    justify-content: center;
    margin:1em 0;
}
.question-section > div {
    display:inline-flex;
    padding:1em
}
.question-section > div > img {
    margin-right: 2em;
}
.question-section a {
    color:var(--color-secondary);
    text-decoration: none;
}

/*======================
      Join Section
========================*/
.join-section {
    background-color: var(--color-primary);
    color: var(--color-text-secondary-on-color);
    padding:1em 0;
}
.join-section h1 {
    color: var(--color-light);
}
.join-section > .content {
    display:flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin:0 8em;
    align-items: center;
}

